--- a/frontend/pixel-vision/src/app/app.component.css
+++ b/frontend/pixel-vision/src/app/app.component.css
@@ -27,6 +27,11 @@ body {
     padding: 2rem;
     margin-bottom: 2rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 80px); /* Set the height of the section to the height of the viewport minus the header height and some padding */
   }
   
   .features {
@@ -41,5 +46,10 @@ body {
     background-color: #333;
     color: #fff;
     margin-top: 1rem;
+  }
+  
+  .btn-large {
+    font-size: 24px;
+    padding: 16px 24px;
   }
   
