--- a/frontend/pixel-vision/src/app/app.component.html
+++ b/frontend/pixel-vision/src/app/app.component.html
@@ -2,11 +2,15 @@
   <h1>PixelVisionX</h1>
 </header>
 <main>
-  <section class="Intro center">
+
+<section class="Intro center">
+  <div>
     <h2>Welcome to PixelVisionX</h2>
     <p>Discover the power of self-supervised learning for computer vision tasks. Our cutting-edge technology allows you to train your computer vision models faster and more accurately than ever before.</p>
-    <button class="btn-large">Start New Project</button>
-  </section>
+    <button class="btn-excite" (click)="startProject()">Unleash Your Creativity!</button>
+  </div>
+</section>
+
   <section class="features">
     <div class="feature-card">
       <img src="image1.jpg" alt="Feature 1">
