updated front end

--- a/frontend/pixel-vision/src/app/app.component.html
+++ b/frontend/pixel-vision/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div>
     <h2>Welcome to PixelVisionX</h2>
     <p>Discover the power of self-supervised learning for computer vision tasks. Our cutting-edge technology allows you to train your computer vision models faster and more accurately than ever before.</p>
-    <button class="btn-excite" (click)="startProject()">Unleash Your Creativity!</button>
+    <button class="btn-excite" (click)="startProject()">Start Project!</button>
   </div>
 </section>
 
