updated neural csss

--- a/frontend/pixel-vision/src/app/app.component.html
+++ b/frontend/pixel-vision/src/app/app.component.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="app.component.css">
-  <link rel="stylesheet" href="/neural.css"> <!-- Add link to new CSS file here -->
+  <link rel="stylesheet" href="neural.css"> <!-- Add link to new CSS file here -->
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     <div class="neuron"></div>
     <div class="neuron"></div>
   </div>
-  
+
 </body>
 
 
