updated app component

--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -1,3 +1,4 @@
+sdrfsd
 <div>
     <h2>Self-Supervised Learning Training</h2>
     <p>Upload images to start training your self-supervised learning model using the MoCo algorithm from PyTorch Lightning.</p>
@@ -6,4 +7,4 @@
       <input type="file" id="fileInput" #fileInput multiple (change)="onFileSelected(fileInput)">
       <button type="submit" (click)="startTraining()">Start Training</button>
     </form>
-  </div>
+</div>
