--- a/frontend/pixel-vision/src/app/start-page/start-page.component.html
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.html
@@ -2,7 +2,7 @@
     <div>
       <h2>Welcome to PixelVisionX</h2>
       <p>Discover the power of self-supervised learning for computer vision tasks. Our cutting-edge technology allows you to train your computer vision models faster and more accurately than ever before.</p>
-      <button class="btn-excite" (click)="newProject()">New Project!</button>
+      <button class="btn-excite" (click)="newProject()">Start Project!</button>
     </div>
 </section>
 
