maybe path is fixed

--- a/frontend/pixel-vision/src/app/app.component.html
+++ b/frontend/pixel-vision/src/app/app.component.html
@@ -13,8 +13,10 @@
     <h1>PixelVisionX</h1>
   </header>
   <main>
+
     <router-outlet></router-outlet> <!-- Add this tag to display the current component -->
-    <div class="neural-bg">
+
+  <!-- <div class="neural-bg">
       <div class="neuron"></div>
       <div class="neuron"></div>
       <div class="neuron"></div>
@@ -22,6 +24,8 @@
       <div class="neuron"></div>
       <div class="neuron"></div>
     </div>  
+  -->
+
   </main>
   <footer>
     <p>&copy; 2023 PixelVisionX. All rights reserved.</p>
