--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -1,3 +1,4 @@
+<p>Upload images to start training your self-supervised learning model using the MoCo algorithm from PyTorch Lightning.</p>
 <div>
     <h2>Self-Supervised Learning Training</h2>
     <p>Upload images to start training your self-supervised learning model using the MoCo algorithm from PyTorch Lightning.</p>
