--- a/frontend/pixel-vision/src/app/start-page/start-page.component.html
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.html
@@ -6,6 +6,15 @@
     </div>
 </section>
 
+<div class="neural-bg">
+    <div class="neuron"></div>
+    <div class="neuron"></div>
+    <div class="neuron"></div>
+    <div class="neuron"></div>
+    <div class="neuron"></div>
+    <div class="neuron"></div>
+</div>  
+
 <section class="features">
     <div class="feature-card">
       <img src="image1.jpg" alt="Feature 1">
