--- a/frontend/pixel-vision/src/app/start-page/start-page.component.html
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.html
@@ -8,17 +8,17 @@
 
 <section class="features">
     <div class="feature-card">
-      <img src="accuracy.png" alt="Feature 1">
+      <img src="/assets/efficent.png" alt="Feature 1">
       <h3>Efficient Training</h3>
       <p>Our self-supervised learning approach drasticclearally reduces the amount of labeled data required for training your models, saving you time and money.</p>
     </div>
     <div class="feature-card">
-      <img src="/accuracy.png" alt="Feature 2">
+      <img src="/assets/accuracy.png" alt="Feature 2">
       <h3>Increased Accuracy</h3>
       <p>By leveraging the power of self-supervised learning, our models achieve higher accuracy on complex computer vision tasks, giving you a competitive edge.</p>
     </div>
     <div class="feature-card">
-      <img src="/userfriendly.png" alt="Feature 3">
+      <img src="/assets//userfriendly.png" alt="Feature 3">
       <h3>User-Friendly Interface</h3>
       <p>Our intuitive interface makes it easy to upload your data, train your models, and deploy them in your applications.</p>
     </div>
