--- a/frontend/pixel-vision/src/app/start-page/start-page.component.html
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.html
@@ -8,7 +8,7 @@
 
 <section class="features">
     <div class="feature-card">
-      <img src="/assets/efficent.png" alt="Feature 1">
+      <img src="/assets/efficient.png" alt="Feature 1">
       <h3>Efficient Training</h3>
       <p>Our self-supervised learning approach drasticclearally reduces the amount of labeled data required for training your models, saving you time and money.</p>
     </div>
@@ -25,12 +25,4 @@
   </section>
 
 
-<div class="neural-bg">
-    <div class="neuron"></div>
-    <div class="neuron"></div>
-    <div class="neuron"></div>
-    <div class="neuron"></div>
-    <div class="neuron"></div>
-    <div class="neuron"></div>
-</div>  
 
