--- a/frontend/pixel-vision/src/app/app.component.html
+++ b/frontend/pixel-vision/src/app/app.component.html
@@ -7,7 +7,7 @@
   <title>PixelVisionX</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app.component.css">
+  <!-- Add the stylesheet <link rel="stylesheet" href="app.component.css">-->
 </head>
 
 <body>
