--- a/frontend/pixel-vision/src/app/start-page/start-page.component.css
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.css
@@ -31,7 +31,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 80px);
+    height: calc(50vh - 80px);
   }
   
   .btn-excite {
@@ -46,6 +46,8 @@ body {
     border: none;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
     outline: none;
+    top: 50%;
+    left: 50%;
   }
   
   .btn-excite:hover {
@@ -61,17 +63,17 @@ body {
     gap: 2rem;
   }
   
+
   .feature-card {
     background-color: #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
-  .feature-card img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-  }
   
   .feature-card h3 {
     margin: 0;
@@ -82,6 +84,12 @@ body {
   .feature-card p {
     margin: 0;
     font-size: 1.1rem;
+  }
+
+  .feature-card img {
+    width: 150px;
+    height: auto;
+    margin-bottom: 1rem;
   }
    
   footer {
