--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -1,1 +1,7 @@
 <p>Upload images to start training your self-supervised learning model using the MoCo algorithm from PyTorch Lightning.</p>
+
+<div>
+    <h2>New Project</h2>
+    <p>Click the button below to start training the deep learning model.</p>
+    <button class="btn-primary" (click)="startTraining()">Start Training</button>
+</div>
