--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -1,14 +1,41 @@
-.start-training-btn {
-  font-size: 18px;
-  padding: 12px 24px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.2s;
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.start-training-btn:hover {
-  background-color: #0056b3;
+
+  .btn-excite {
+    background-color: #ff5722;
+    color: #fff;
+    font-size: 28px;
+    padding: 20px 60px;
+    border-radius: 50px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: none;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+    outline: none;
+    margin-bottom: 2rem;
+  }
+
+
+  
+  .btn-excite:hover {
+    background-color: #fff;
+    color: #ff5722;
+    transform: scale(1.1);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  }
+
+
+  .chart-container {
+    background-color: #fff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    margin-top: 2rem;
+    width: 100%;
+    max-width: 800px;
 }
+
