--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -42,4 +42,22 @@
 
 
 
+.status-bar-container {
+    width: 100%;
+    height: 2rem;
+    position: relative;
+  }
+  
+  .status-bar {
+    background-color: #ddd;
+    color: #333;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+
 
