--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -1,11 +1,32 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.intro {
+  margin-bottom: 2rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+input {
+  display: block;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
 }
 
 
-  .btn-excite {
+
+.btn-excite {
     background-color: #ff5722;
     color: #fff;
     font-size: 28px;
@@ -19,7 +40,13 @@
     outline: none;
     margin-bottom: 2rem;
   }
-
+  
+  .btn-secondary {
+    font-size: 16px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+  }
 
   
   .btn-excite:hover {
