--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -79,6 +79,20 @@ input {
     text-align: center;
     margin-top: 20px;
   }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .step-container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+    width: 500px;
+  }
   
 
 
