--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -1,4 +1,3 @@
-
 .container {
   display: flex;
   flex-direction: column;
@@ -10,20 +9,16 @@
 }
 
 label {
-  display: block;
   margin-bottom: 0.5rem;
 }
 
 input {
-  display: block;
-  margin-bottom: 1rem;
   padding: 0.5rem;
   font-size: 1rem;
   line-height: 1.5;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
-
 
 
 .btn-excite {
@@ -93,6 +88,36 @@ input {
     text-align: left;
     width: 500px;
   }
+
+
+  .form-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
   
-
-
+  .form-row label,
+  .form-row input,
+  .form-row select {
+    margin: 0 0.5rem;
+  }
+  
+  .form-row input,
+  .form-row select {
+    flex: 1;
+  }
+  
+  .form-row input {
+    margin-bottom: 0;
+  }
+  
+  .form-row label {
+    margin-bottom: 0;
+  }
+  
+  .form-row select {
+    width: 100%;
+    max-width: 200px; /* Set the maximum width for the select element */
+  }
