--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -79,6 +79,7 @@ input {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 5rem; /* Add margin-top here */
   }
 
   .step-container {
