--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -21,7 +21,7 @@
           <label for="algorithmType">Algorithm Type</label>
           <select formControlName="algorithmType" id="algorithmType" required>
             <option value="">Select Algorithm</option>
-            <option value="algorithm1">Algorithm 1</option>
+            <option value="MOCO">Algorithm 1</option>
             <option value="algorithm2">Algorithm 2</option>
             <option value="algorithm3">Algorithm 3</option>
           </select>
