--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-
+  <button type="button" class="btn-reset" (click)="reset()">Reset</button>
   <div class="intro">
     <h1>Train Self Supervised Model</h1>
     <div class="steps-wrapper">
@@ -30,9 +30,6 @@
           <button type="button" class="btn-excite" (click)="reset()" style="margin-top: 1rem">Reset</button>
         </div>
         <!-- Add more form controls if needed -->
-        <div class="button-container">
-          <button type="submit" class="btn-excite">Submit HParameters</button>
-        </div>
       </form>
     </div>
 
