updated reset button position

--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -26,10 +26,10 @@
             <option value="algorithm3">Algorithm 3</option>
           </select>
         </div>
-        <div class="button-container">
-          <button type="button" class="btn-excite" (click)="reset()" style="margin-top: 1rem">Reset</button>
-        </div>
         <!-- Add more form controls if needed -->
+        <div class="button-container">
+          <button type="submit" class="btn-excite">Submit HParameters</button>
+        </div>
       </form>
     </div>
 
