updated reset button

--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -124,10 +124,15 @@ input {
   }
 
 
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 40rem; /* Add this line */
+  }
+  
+  
   .btn-reset {
-    position: fixed;
-    top: 9rem;
-    right: 48rem;
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
     background-color: #f44336;
