--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -1,8 +1,10 @@
 
 <div class="container">
-  <button type="button" class="btn-reset" (click)="reset()">Reset</button>
   <div class="intro">
-    <h1>Train Self Supervised Model</h1>
+    <div class="header-container">
+      <h1>Train Self Supervised Model</h1>
+      <button type="button" class="btn-reset" (click)="reset()">Reset</button>
+    </div>
     <div class="steps-wrapper">
       <div class="step-container">
         <h3>Step 1: Configure Hyperparameters</h3>
