--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -147,3 +147,17 @@ input {
     background-color: #d32f2f;
   }
   
+
+
+  .image-preview-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  
+  .image-thumbnail {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
