--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -183,3 +183,32 @@ h1, h3 {
   width: 100%;
   margin-top: 1rem;
 }
+
+
+/* Upload Progress Bar */
+.upload-progress-bar-container {
+  width: 100%;
+  background-color: #f3f3f3;
+  position: relative;
+  height: 20px;
+  border-radius: 4px;
+}
+
+.upload-progress-bar {
+  height: 100%;
+  background-color: #4CAF50;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 4px;
+}
+
+.upload-progress-text {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #000;
+  font-weight: bold;
+}
+
